--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-validator": "^6.15.0",
+    "ionicons": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
