--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "ionicons": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
